--- a/src/rust/metric-forwarder/Cargo.toml
+++ b/src/rust/metric-forwarder/Cargo.toml
@@ -14,6 +14,7 @@ chrono = "0.4.18"
 flate2 = "1.0.6"
 futures = "0.3.*"
 hmap = "0.1.0"
+itertools = "0.8.0"
 lambda_runtime = "0.2.*"
 log = "0.4.6"
 ordered-float = "2.0.0"
