Refactor to reduce copied code between the two release scripts

--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -116,7 +116,7 @@ jobs:
         run: |
           wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
           chmod +x dobi-linux
-
+      
       - name: Determine release channel
         run: |
           BRANCH=${{ github.event.release.target_commitish }}
@@ -127,67 +127,28 @@ jobs:
           fi
           echo "::set-env name=CHANNEL::$CHANNEL"
 
-      - name: Build Rust services
+      - name: Export tag
         env:
           VERSION: ${{ github.event.release.tag_name }}
         run: |
-          GRAPL_RELEASE_TARGET=release TAG="$VERSION-$CHANNEL" ./dobi-linux --no-bind-mount rust
+          echo "::set-env name=TAG::$VERSION-$CHANNEL"
+
+      - name: Build Rust services
+        run: |
+          GRAPL_RELEASE_TARGET=release ./dobi-linux --no-bind-mount rust
 
       - name: Extract artifacts from Rust build
         id: extract-rust-artifacts
-        env:
-          VERSION: ${{ github.event.release.tag_name }}
         run: |
-          cp dist/sysmon-subgraph-generator ./bootstrap
-          zip -9 sysmon-subgraph-generator-$VERSION-$CHANNEL.zip ./bootstrap
-          rm ./bootstrap
-          echo "::set-output name=sysmon-subgraph-generator::sysmon-subgraph-generator-$VERSION-$CHANNEL.zip"
-
-          cp dist/generic-subgraph-generator ./bootstrap
-          zip -9 generic-subgraph-generator-$VERSION-$CHANNEL.zip ./bootstrap
-          rm ./bootstrap
-          echo "::set-output name=generic-subgraph-generator::generic-subgraph-generator-$VERSION-$CHANNEL.zip"
-
-          cp dist/node-identifier ./bootstrap
-          zip -9 node-identifier-$VERSION-$CHANNEL.zip ./bootstrap
-          rm ./bootstrap
-          echo "::set-output name=node-identifier::node-identifier-$VERSION-$CHANNEL.zip"
-
-          cp dist/node-identifier-retry-handler ./bootstrap
-          zip -9 node-identifier-retry-handler-$VERSION-$CHANNEL.zip ./bootstrap
-          rm ./bootstrap
-          echo "::set-output name=node-identifier-retry-handler::node-identifier-retry-handler-$VERSION-$CHANNEL.zip"
-
-          cp dist/graph-merger ./bootstrap
-          zip -9 graph-merger-$VERSION-$CHANNEL.zip ./bootstrap
-          rm ./bootstrap
-          echo "::set-output name=graph-merger::graph-merger-$VERSION-$CHANNEL.zip"
-
-          cp dist/analyzer-dispatcher ./bootstrap
-          zip -9 analyzer-dispatcher-$VERSION-$CHANNEL.zip ./bootstrap
-          rm ./bootstrap
-          echo "::set-output name=analyzer-dispatcher::analyzer-dispatcher-$VERSION-$CHANNEL.zip"
-
-          cp dist/metric-forwarder ./bootstrap
-          zip -9 metric-forwarder-$VERSION-$CHANNEL.zip ./bootstrap
-          rm ./bootstrap
-          echo "::set-output name=metric-forwarder::metric-forwarder-$VERSION-$CHANNEL.zip"
+          ./etc/build_scripts/extract_rust_artifacts.sh
 
       - name: Log in to Docker registry
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username grapl --password-stdin
 
       - name: Publish Rust images to DockerHub
-        env:
-          VERSION: ${{ github.event.release.tag_name }}
         run: |
-          docker push grapl/grapl-sysmon-subgraph-generator:$VERSION-$CHANNEL
-          docker push grapl/grapl-generic-subgraph-generator:$VERSION-$CHANNEL
-          docker push grapl/grapl-node-identifier:$VERSION-$CHANNEL
-          docker push grapl/grapl-node-identifier-retry-handler:$VERSION-$CHANNEL
-          docker push grapl/grapl-graph-merger:$VERSION-$CHANNEL
-          docker push grapl/grapl-analyzer-dispatcher:$VERSION-$CHANNEL
-          docker push grapl/grapl-metric-forwarder:$VERSION-$CHANNEL
+          ./etc/build_scripts/push_rust_to_docker.sh
 
       - name: Clean up dist
         run: |
@@ -295,19 +256,10 @@ jobs:
       - name: Log in to Docker registry
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username grapl --password-stdin
-
+        
       - name: Publish Python images to DockerHub
-        env:
-          VERSION: ${{ github.event.release.tag_name }}
         run: |
-          docker push grapl/grapl-analyzer-executor:$VERSION-$CHANNEL
-          docker push grapl/grapl-engagement-creator:$VERSION-$CHANNEL
-          docker push grapl/grapl-notebook:$VERSION-$CHANNEL
-          docker push grapl/grapl-engagement-edge:$VERSION-$CHANNEL
-          docker push grapl/grapl-model-plugin-deployer:$VERSION-$CHANNEL
-          docker push grapl/grapl-graph-provision:$VERSION-$CHANNEL
-          docker push grapl/grapl-dynamodb-provision:$VERSION-$CHANNEL
-          docker push grapl/grapl-dgraph-ttl:$VERSION-$CHANNEL
+          ./etc/build_scripts/push_py_to_docker.sh
 
       - name: Extract Python artifacts from build
         id: extract-python-artifacts
@@ -485,30 +437,30 @@ jobs:
           fi
           echo "::set-env name=CHANNEL::$CHANNEL"
 
-      - name: Build JS services
+      - name: Export tag
         env:
           VERSION: ${{ github.event.release.tag_name }}
         run: |
-          GRAPL_RELEASE_TARGET=release TAG="$VERSION-$CHANNEL" ./dobi-linux --no-bind-mount js
+          echo "::set-env name=TAG::$VERSION-$CHANNEL"
+
+      - name: Build JS services
+        run: |
+          GRAPL_RELEASE_TARGET=release ./dobi-linux --no-bind-mount js
 
       - name: Log in to Docker registry
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username grapl --password-stdin
 
       - name: Publish JS images to DockerHub
-        env:
-          VERSION: ${{ github.event.release.tag_name }}
         run: |
-          docker push grapl/grapl-engagement-view:$VERSION-$CHANNEL
-          docker push grapl/grapl-graphql-endpoint:$VERSION-$CHANNEL
+          docker push grapl/grapl-engagement-view:$TAG
+          docker push grapl/grapl-graphql-endpoint:$TAG
 
       - name: Extract JS artifacts from build
         id: extract-js-artifacts
-        env:
-          VERSION: ${{ github.event.release.tag_name }}
         run: |
-          cp dist/graphql-endpoint/lambda.zip graphql-endpoint-$VERSION-$CHANNEL.zip
-          echo "::set-output name=graphql-endpoint::graphql-endpoint-$VERSION-$CHANNEL.zip"
+          cp dist/graphql-endpoint/lambda.zip graphql-endpoint-$TAG.zip
+          echo "::set-output name=graphql-endpoint::graphql-endpoint-$TAG.zip"
 
       - name: Upload graphql-endpoint to Github
         uses: actions/upload-release-asset@v1
