Push 'staging' to docker every time it gets a new push (#312)
* Add a 'release Staging to Dockerhub every time code is pushed to Staging' workflow

* Refactor to reduce copied code between the two release scripts

--- a/dobi.yaml
+++ b/dobi.yaml
@@ -40,7 +40,7 @@ image=analyzer-dispatcher:
     - rust-build
 
 image=metric-forwarder:
-  image: grapl/metric-forwarder
+  image: grapl/grapl-metric-forwarder
   context: src/rust/metric-forwarder
   dockerfile: Dockerfile
   args:
