--- a/.github/workflows/grapl-staging-release.yml
+++ b/.github/workflows/grapl-staging-release.yml
@@ -3,7 +3,7 @@ name: Grapl Staging Release
 on:
   # Every time we push to staging,
   # release that to Dockerhub with the tag 'staging'.
-  pull_request:  # TODO reverting asap
+  push:
     branches:
     - staging
 
