--- a/src/rust/generators/generic-subgraph-generator/Cargo.toml
+++ b/src/rust/generators/generic-subgraph-generator/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2018"
 
 [dependencies]
 graph-generator-lib = {path = "../graph-generator-lib/", version="*"}
-grapl-graph-descriptions = { path="../graph-descriptions", version="*"}
-grapl-config = {path="../grapl-config", version="*"}
+grapl-graph-descriptions = { path="../../graph-descriptions", version="*"}
+grapl-config = {path="../../grapl-config", version="*"}
 
 sqs-lambda = "0.20.*"
 
