--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: "3.8"
 services:
 
   #
@@ -7,7 +7,7 @@ services:
 
   grapl-master-graph-db:
     tty: false
-    image: dgraph/standalone:v1.2.2
+    image: dgraph/standalone:v20.07.1
     ports:
       - "8000:8000"
       - "8080:8080"
@@ -225,7 +225,7 @@ services:
 
   grapl-analyzer-executor:
     image: grapl/grapl-analyzer-executor:${TAG:-latest}
-    command: /bin/sh -c '. venv/bin/activate && python3 analyzer_executor/src/analyzer-executor.py'
+    command: /bin/sh -c . 'venv/bin/activate && python3 analyzer_executor/src/analyzer-executor.py'
     environment:
       - "IS_LOCAL=True"
       - GRPC_ENABLE_FORK_SUPPORT=1
