--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: "3.8"
 services:
 
   #
@@ -7,7 +7,7 @@ services:
 
   grapl-master-graph-db:
     tty: false
-    image: dgraph/standalone:v1.2.2
+    image: dgraph/standalone:v20.07.1
     ports:
       - "8000:8000"
       - "8080:8080"
