Adding MG_ALPHAS to notebook env in docker-compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -346,6 +346,8 @@ services:
 
   grapl-notebook:
     image: grapl/grapl-notebook:${TAG:-latest}
+    environment:
+      - MG_ALPHAS=master_graph:9080
     links:
       - grapl-master-graph-db:master_graph
     ports:
