--- a/src/python/grapl_provision/Dockerfile
+++ b/src/python/grapl_provision/Dockerfile
@@ -1,4 +1,4 @@
-FROM grapl/grapl-python-build:latest AS grapl-local-provision-build
+FROM grapl/grapl-python-build:latest AS grapl-provision-build
 USER grapl
 WORKDIR /home/grapl
 COPY --chown=grapl . ./grapl_local_provision
