Revert "force prune"
This reverts commit 29bf1218c6c773d8864673d5fa4f76e2c5174399.

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -108,7 +108,7 @@ jobs:
 
       - name: clean intermediate images
         run: |
-          docker image prune --force
+          docker image prune
 
       - name: Build the rest of Grapl
         run: |
